export modalFoote component and change packageName

--- a/packages/components/assets/index.less
+++ b/packages/components/assets/index.less
@@ -3,7 +3,7 @@
 @error-color: #ed6f6f;
 @warning-color: #efbd47;
 @success-color: #55d187;
-@namespace: lanvenUi;
+@namespace: lanven-ui;
 @app-content-background: #fafafa;
 @iconify-bg-color: #5551;
 @component-background: #fff;
