--- a/packages/components/src/Basic-Modal/src/index.less
+++ b/packages/components/src/Basic-Modal/src/index.less
@@ -3,7 +3,7 @@
 @error-color: #ed6f6f;
 @warning-color: #efbd47;
 @success-color: #55d187;
-@namespace: lanvenUi;
+@namespace: lanven-ui;
 
 @iconify-bg-color: #5551;
 .fullscreen-modal {
