--- a/site/docs/.vitepress/theme/theme.css
+++ b/site/docs/.vitepress/theme/theme.css
@@ -27,7 +27,7 @@
   border: none !important;
 }
 
-.lanvenUi-basic-table {
+.lanven-ui-basic-table {
   border: 1px solid #cecece4d;
   margin-top: 4px;
 }
